# erc8004-tail-risk-agent

./: .gitignore  README.md
.github/workflows/: ci.yml
agent/: claims_bot.py  erc8004_client.py  llm_pricer.py  main.py  pyproject.toml  rebalancer.py  risk_engine.py
agent/src/: __init__.py  agent_loop.py  api.py  blockchain.py  claude_agent.py  config.py  main.py  models.py  price_feed.py  risk_engine.py  volatility_oracle.py
agent/src/tail_risk_agent/: __init__.py  main.py  risk_engine.py
agent/tests/: test_risk_engine.py
contracts/: ERC8004IdentityRegistry.sol  ERC8004ReputationRegistry.sol  ERC8004ValidationRegistry.sol  TailGuardVault.sol  foundry.toml  package-lock.json  package.json  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: AgentWallet.sol  IdentityRegistry.sol  ReputationRegistry.sol  TailRiskUnderwriter.sol  TailRiskVault.sol  ValidationRegistry.sol
contracts/script/: Deploy.s.sol
contracts/scripts/: deploy.ts
contracts/src/: ERC8004IdentityRegistry.sol  ERC8004ReputationRegistry.sol  ERC8004ValidationRegistry.sol  IdentityRegistry.sol  MockUSDC.sol  ReputationRegistry.sol  TailRiskAgent.sol  TailRiskVault.sol  TrustScoreOracle.sol
contracts/src/interfaces/: IERC8004Identity.sol  IERC8004Reputation.sol  IERC8004Validation.sol
contracts/test/: TailRiskAgent.t.sol  TailRiskAgent.test.ts  TailRiskVault.t.sol
docs/: ARCHITECTURE.md
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/src/app/: globals.css  (+1 more)
(+14 files in other folders)
