[project]
name = "tail-risk-agent"
version = "0.1.0"
description = "ERC-8004 tail-risk scoring and policy recommendation agent"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
tail-risk-agent = "tail_risk_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tail_risk_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
